# cmake-bats

./: BatsTest.cmake  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: BatsTest.cmake
doc/sample-project/: test-integers.sh
sample/: CMakeLists.txt  test-edge-cases.bats
sample-project/: CMakeLists.txt  main.cpp  test-edge-cases.bats
test/: CMakeLists.txt  main.cpp  more_tests.sh  sample_tests.sh
